src/test/arreglos/error_literal_heterogeneo.cps
// ❌ Arreglo con tipos mezclados.
let xs: integer[] = [1, "dos"]; // error: literal heterogéneo (integer vs string)
